Able to extract playlist songs and their album names, and write them into an excel file

--- a/project.json
+++ b/project.json
@@ -7,7 +7,8 @@
     "UiPath.Mail.Activities": "[1.10.5]",
     "UiPath.System.Activities": "[21.4.1]",
     "UiPath.UIAutomation.Activities": "[21.4.4]",
-    "UiPath.WebAPI.Activities": "[1.7.0]"
+    "UiPath.WebAPI.Activities": "[1.7.0]",
+    "UiPathTeam.JsonDataConverter.Activities": "[1.1.0]"
   },
   "webServices": [],
   "entitiesStores": [],
